...
              title="Quick Play"
              baseColor="#e94b24"
              onPress={onStart}
              width={200}
              breathing
              style={styles.shadow}
              testID="home-quick-play"
            />
          </View>

          <Button
            title="How to Play"
            baseColor="#e94b24"
...
